# py-bookshelf

./: .env  pyproject.toml
bookshelf.egg-info/: PKG-INFO  SOURCES.txt
migrations/: env.py
migrations/versions/: 2276ac54ebc7_create_all_tables.py
src/controllers/: author_controller.py
src/entities/: __init__.py  author.py  author_books.py  book.py  models.py
src/entrypoint/: main.py
